--- a/poster/style.css
+++ b/poster/style.css
@@ -71,10 +71,79 @@ html, body{
     max-width: 200px;
   }
 
-  @media (max-width: 1000px){
-      .section{
+  .foto-con{
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      grid-template-areas: "een twee"
+                           "drie vier";
 
+      grid-gap: 10px;
+  }
+
+  .foto1{
+      grid-column: 1;
+      grid-row: 1;
+      grid-area: een;
+  }
+
+  .foto2{
+      grid-column: 2;
+      grid-row: 1;
+      grid-area: twee;
+  }
+  @media (max-width: 1500px){
+      .section{
+          grid-template-columns: 1fr;
+          grid-template-rows: 1fr 1fr 1fr;
       }
+
+      .text1{
+          grid-row: 1;
+      }
+
+      .text2{
+        grid-row: 2;
+    }
+
+    .text3{
+        grid-row: 3;
+    }
+
+    .foto-con{
+      grid-template-columns: 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: "een" 
+                           "twee"
+                           "drie" 
+                           "vier";
+    }
+
+    .foto-con img{
+      max-width: 100%;
+      height: auto;
+      object-fit: cover;
+    }
+
+    .foto1{      
+      max-height: auto;
+      max-width: 100%;
+    }
+
+    .foto2{      
+      max-height: auto;
+      max-width: 100%;
+    }
+
+    .foto3{      
+      max-height: auto;
+      max-width: 100%;
+    }
+
+    .foto4{      
+      max-height: auto;
+      max-width: 100%;
+    }
 
   }
   
